--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
       "$windows/*": ["src/windows/*"]
     }
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "src/windows/.scriptui-fix.d.ts"]
 }
